--- a/cart.html
+++ b/cart.html
@@ -20,16 +20,16 @@
       <div class="limitedWidthBlockContainer informations">
         <div class="limitedWidthBlock">
           <ul>
-            <li><img src="../images/icons/phone.svg" alt="logo de téléphone" class="informations__phone">01 23 45 67 89</li>
-            <li><img src="../images/icons/mail.svg" alt="logo d'une enveloppe" class="informations__mail">support@name.com</li>
-            <li><img src="../images/icons/adress.svg" alt="logo d'un point de géolocalisation" class="informations__address">01 23 45 67 89</li>
+            <li><img src="/phone.svg" alt="logo de téléphone" class="informations__phone">01 23 45 67 89</li>
+            <li><img src="/mail.svg" alt="logo d'une enveloppe" class="informations__mail">support@name.com</li>
+            <li><img src="/adress.svg" alt="logo d'un point de géolocalisation" class="informations__address">01 23 45 67 89</li>
           </ul>
         </div>
       </div>
       <div class="limitedWidthBlockContainer menu">
         <div class="limitedWidthBlock">
           <a href="./index.html">
-            <img class="logo" src="../images/logo.png" alt="Logo de l'entreprise">
+            <img class="logo" src="/logo.png" alt="Logo de l'entreprise">
           </a>
           <nav>
             <ul>
