--- a/cart.html
+++ b/cart.html
@@ -39,7 +39,7 @@
           </nav>
         </div>
       </div>
-      <img class="banniere" src="../images/banniere.png" alt="Baniere">
+      <img class="banniere" src="/banniere.png" alt="Baniere">
     </header>
     
     <main class="limitedWidthBlockContainer">
@@ -113,7 +113,7 @@
       <div class="limitedWidthBlockContainer footerMain">
         <div class="limitedWidthBlock">
           <div>
-            <img class="logo" src="../images/logo.png" alt="Logo de l'entreprise">
+            <img class="logo" src="/logo.png" alt="Logo de l'entreprise">
           </div>
           <div>
             <p>10 quai de la charente <br>75019 Paris 19</p>
