--- a/cart.html
+++ b/cart.html
@@ -20,16 +20,16 @@
       <div class="limitedWidthBlockContainer informations">
         <div class="limitedWidthBlock">
           <ul>
-            <li><img src="/phone.svg" alt="logo de téléphone" class="informations__phone">01 23 45 67 89</li>
-            <li><img src="/mail.svg" alt="logo d'une enveloppe" class="informations__mail">support@name.com</li>
-            <li><img src="/adress.svg" alt="logo d'un point de géolocalisation" class="informations__address">01 23 45 67 89</li>
+            <li><img src="images/phone.svg" alt="logo de téléphone" class="informations__phone">01 23 45 67 89</li>
+            <li><img src="images/mail.svg" alt="logo d'une enveloppe" class="informations__mail">support@name.com</li>
+            <li><img src="images/adress.svg" alt="logo d'un point de géolocalisation" class="informations__address">01 23 45 67 89</li>
           </ul>
         </div>
       </div>
       <div class="limitedWidthBlockContainer menu">
         <div class="limitedWidthBlock">
           <a href="./index.html">
-            <img class="logo" src="/logo.png" alt="Logo de l'entreprise">
+            <img class="logo" src="images/logo.png" alt="Logo de l'entreprise">
           </a>
           <nav>
             <ul>
@@ -39,7 +39,7 @@
           </nav>
         </div>
       </div>
-      <img class="banniere" src="/banniere.png" alt="Baniere">
+      <img class="banniere" src="images/banniere.png" alt="Baniere">
     </header>
     
     <main class="limitedWidthBlockContainer">
@@ -50,7 +50,7 @@
             <section id="cart__items">
              <!--  <article class="cart__item" data-id="{product-ID}">
                 <div class="cart__item__img">
-                  <img src="../images/product01.jpg" alt="Photographie d'un canapé">
+                  <img src="images/product01.jpg" alt="Photographie d'un canapé">
                 </div>
                 <div class="cart__item__content">
                   <div class="cart__item__content__titlePrice">
@@ -113,7 +113,7 @@
       <div class="limitedWidthBlockContainer footerMain">
         <div class="limitedWidthBlock">
           <div>
-            <img class="logo" src="/logo.png" alt="Logo de l'entreprise">
+            <img class="logo" src="images/logo.png" alt="Logo de l'entreprise">
           </div>
           <div>
             <p>10 quai de la charente <br>75019 Paris 19</p>
