--- a/index.html
+++ b/index.html
@@ -52,13 +52,16 @@
           <h2>Une gamme d'articles exclusifs</h2>
         </div>
         <section class="items" id="items"> 
-          <a href="./product.html?id=42">
+          <!-- <a href="./product.html?id=42">
             <article>
               <img src="images/product01.jpg" alt="Lorem ipsum dolor sit amet, Kanap name1">
               <h3 class="productName">Kanap name1</h3>
               <p class="productDescription">Dis enim malesuada risus sapien gravida nulla nisl arcu. Dis enim malesuada risus sapien gravida nulla nisl arcu.</p>
             </article>
-          </a>
+          </a> -->
+          <article>
+            <img src="" id="products" alt="">
+          </article>
         </section>
       </div>
     </main>
