--- a/index.html
+++ b/index.html
@@ -53,15 +53,19 @@
         </div>
         <section class="items" id="items"> 
           <a href="./product.html?id=42">
-            <article>
+            <article id="results">
               <img src="images/product01.jpg" alt="Lorem ipsum dolor sit amet, Kanap name1">
               <h3 class="productName">Kanap name1</h3>
               <p class="productDescription">Dis enim malesuada risus sapien gravida nulla nisl arcu. Dis enim malesuada risus sapien gravida nulla nisl arcu.</p>
             </article>
           </a>
+          <article>
+            <img src="" id="products" alt="">
+          </article>
         </section>
       </div>
     </main>
+
     
     <footer>
       <div class="limitedWidthBlockContainer footerMain">
@@ -86,6 +90,7 @@
         </div>
       </div>
     </footer>
-  <script src="../js/script.js"></script>
+  <!-- <script src="../js/script.js"></script> -->
+  <script src="../js/product.js"></script>
   </body>
 </html>
