--- a/index.html
+++ b/index.html
@@ -50,16 +50,13 @@
           <h2>Une gamme d'articles exclusifs</h2>
         </div>
         <section class="items" id="items"> 
-          <a href="./product.html?id=42">
-            <article id="results">
-              <img src="images/product01.jpg" alt="Lorem ipsum dolor sit amet, Kanap name1">
+          <a href="./product.html?id=2">
+            <article id="resultsItems">
+              <!-- <img src="images/product01.jpg" alt="Lorem ipsum dolor sit amet, Kanap name1">
               <h3 class="productName">Kanap name1</h3>
-              <p class="productDescription">Dis enim malesuada risus sapien gravida nulla nisl arcu. Dis enim malesuada risus sapien gravida nulla nisl arcu.</p>
+              <p class="productDescription">Dis enim malesuada risus sapien gravida nulla nisl arcu. Dis enim malesuada risus sapien gravida nulla nisl arcu.</p> -->
             </article>
           </a>
-          <article>
-            <img src="" id="products" alt="">
-          </article>
         </section>
       </div>
     </main>
@@ -88,7 +85,7 @@
         </div>
       </div>
     </footer>
-  <!-- <script src="../js/script.js"></script> -->
-  <script src="../js/product.js"></script>
+  <script src="../js/script.js"></script>
+  <!-- <script src="../js/product.js"></script> -->
   </body>
 </html>
