--- a/product.html
+++ b/product.html
@@ -45,7 +45,7 @@
     <main class="limitedWidthBlockContainer">
       <div class="limitedWidthBlock">
         <section class="item">
-          <article>
+          <article id="resultsProducts">
             <div class="item__img">
               <!-- <img src="../images/logo.png" alt="Photographie d'un canapé"> -->
             </div>
@@ -110,6 +110,6 @@
         </div>
       </div>
     </footer>
-  <script src="../js/product.js"></script>
+    <script src="../js/product.js"></script>
   </body>
 </html>
