--- a/front/html/product.html
+++ b/front/html/product.html
@@ -9,8 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet" />
-    <link href="css/product.css" rel="stylesheet" />
+    <link href="../css/style.css" rel="stylesheet" />
+    <link href="../css/product.css" rel="stylesheet" />
+
+    <script src="../js/article.js" defer></script>
+    <script src="../js/Product.js" defer></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
@@ -20,16 +23,16 @@
       <div class="limitedWidthBlockContainer informations">
         <div class="limitedWidthBlock">
           <ul>
-            <li><img src="images/phone.svg" alt="logo de téléphone" class="informations__phone">01 23 45 67 89</li>
-            <li><img src="images/mail.svg" alt="logo d'une enveloppe" class="informations__mail">support@name.com</li>
-            <li><img src="images/adress.svg" alt="logo d'un point de géolocalisation" class="informations__address">01 23 45 67 89</li>
+            <li><img src="../images/icons/phone.svg" alt="logo de téléphone" class="informations__phone">01 23 45 67 89</li>
+            <li><img src="../images/icons/mail.svg" alt="logo d'une enveloppe" class="informations__mail">support@name.com</li>
+            <li><img src="../images/icons/adress.svg" alt="logo d'un point de géolocalisation" class="informations__address">01 23 45 67 89</li>
           </ul>
         </div>
       </div>
       <div class="limitedWidthBlockContainer menu">
         <div class="limitedWidthBlock">
           <a href="./index.html">
-            <img class="logo" src="images/logo.png" alt="Logo de l'entreprise">
+            <img class="logo" src="../images/logo.png" alt="Logo de l'entreprise">
           </a>
           <nav>
             <ul>
@@ -39,14 +42,14 @@
           </nav>
         </div>
       </div>
-      <img class="banniere" src="images/banniere.png" alt="Baniere">
+      <img class="banniere" src="../images/banniere.png" alt="Baniere">
     </header>
 
     <main class="limitedWidthBlockContainer">
       <div class="limitedWidthBlock">
         <section class="item">
-          <article id="resultsProducts">
-            <div class="item__img">
+          <article>
+            <div class="item__img" id="toto">
               <!-- <img src="../images/logo.png" alt="Photographie d'un canapé"> -->
             </div>
             <div class="item__content">
@@ -91,7 +94,7 @@
       <div class="limitedWidthBlockContainer footerMain">
         <div class="limitedWidthBlock">
           <div>
-            <img class="logo" src="images/logo.png" alt="Logo de l'entreprise">
+            <img class="logo" src="../images/logo.png" alt="Logo de l'entreprise">
           </div>
           <div>
             <p>10 quai de la charente <br>75019 Paris 19</p>
@@ -109,7 +112,6 @@
           <p>© Copyright 2021 - 2042 | Openclassrooms by Openclassrooms | All Rights Reserved | Powered by <3</p>
         </div>
       </div>
-    </footer>
-    <script src="../js/product.js"></script>
+    </footer>  
   </body>
 </html>
