--- a/front/html/product.html
+++ b/front/html/product.html
@@ -13,7 +13,7 @@
     <link href="../css/product.css" rel="stylesheet" />
 
     <script src="../js/article.js" defer></script>
-    <script src="../js/Product.js" defer></script>
+    <script src="../js/product.js" defer></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
