--- a/front/html/product.html
+++ b/front/html/product.html
@@ -12,9 +12,6 @@
     <link href="../css/style.css" rel="stylesheet" />
     <link href="../css/product.css" rel="stylesheet" />
 
-    <script src="../js/article.js" defer></script>
-    <script src="../js/product.js" defer></script>
-
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
@@ -49,7 +46,7 @@
       <div class="limitedWidthBlock">
         <section class="item">
           <article>
-            <div class="item__img" id="toto">
+            <div class="item__img">
               <!-- <img src="../images/logo.png" alt="Photographie d'un canapé"> -->
             </div>
             <div class="item__content">
@@ -112,6 +109,7 @@
           <p>© Copyright 2021 - 2042 | Openclassrooms by Openclassrooms | All Rights Reserved | Powered by <3</p>
         </div>
       </div>
-    </footer>  
+    </footer>
+  <script src="../js/product.js"></script>
   </body>
 </html>
