--- a/front/html/cart.html
+++ b/front/html/cart.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet" />
-    <link href="css/cart.css" rel="stylesheet" />
+    <link href="../css/style.css" rel="stylesheet" />
+    <link href="../css/cart.css" rel="stylesheet" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
@@ -20,16 +20,16 @@
       <div class="limitedWidthBlockContainer informations">
         <div class="limitedWidthBlock">
           <ul>
-            <li><img src="images/phone.svg" alt="logo de téléphone" class="informations__phone">01 23 45 67 89</li>
-            <li><img src="images/mail.svg" alt="logo d'une enveloppe" class="informations__mail">support@name.com</li>
-            <li><img src="images/adress.svg" alt="logo d'un point de géolocalisation" class="informations__address">01 23 45 67 89</li>
+            <li><img src="../images/icons/phone.svg" alt="logo de téléphone" class="informations__phone">01 23 45 67 89</li>
+            <li><img src="../images/icons/mail.svg" alt="logo d'une enveloppe" class="informations__mail">support@name.com</li>
+            <li><img src="../images/icons/adress.svg" alt="logo d'un point de géolocalisation" class="informations__address">01 23 45 67 89</li>
           </ul>
         </div>
       </div>
       <div class="limitedWidthBlockContainer menu">
         <div class="limitedWidthBlock">
           <a href="./index.html">
-            <img class="logo" src="images/logo.png" alt="Logo de l'entreprise">
+            <img class="logo" src="../images/logo.png" alt="Logo de l'entreprise">
           </a>
           <nav>
             <ul>
@@ -39,7 +39,7 @@
           </nav>
         </div>
       </div>
-      <img class="banniere" src="images/banniere.png" alt="Baniere">
+      <img class="banniere" src="../images/banniere.png" alt="Baniere">
     </header>
     
     <main class="limitedWidthBlockContainer">
@@ -48,13 +48,14 @@
           <h1>Votre panier</h1>
           <section class="cart">
             <section id="cart__items">
-             <!--  <article class="cart__item" data-id="{product-ID}">
+             <!--  <article class="cart__item" data-id="{product-ID}" data-color="{product-color}">
                 <div class="cart__item__img">
-                  <img src="images/product01.jpg" alt="Photographie d'un canapé">
+                  <img src="../images/product01.jpg" alt="Photographie d'un canapé">
                 </div>
                 <div class="cart__item__content">
-                  <div class="cart__item__content__titlePrice">
+                  <div class="cart__item__content__description">
                     <h2>Nom du produit</h2>
+                    <p>Vert</p>
                     <p>42,00 €</p>
                   </div>
                   <div class="cart__item__content__settings">
@@ -113,7 +114,7 @@
       <div class="limitedWidthBlockContainer footerMain">
         <div class="limitedWidthBlock">
           <div>
-            <img class="logo" src="images/logo.png" alt="Logo de l'entreprise">
+            <img class="logo" src="../images/logo.png" alt="Logo de l'entreprise">
           </div>
           <div>
             <p>10 quai de la charente <br>75019 Paris 19</p>
