--- a/front/html/index.html
+++ b/front/html/index.html
@@ -10,10 +10,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href="../css/style.css" rel="stylesheet" />
-    
-    <script src="../js/article.js" defer></script>
-    <script src="../js/index.js" defer></script>
-    
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -39,8 +35,6 @@
             <ul>
               <a href="./index.html"><li>Accueil</li></a>
               <a href="./cart.html"><li>Panier</li></a>
-              <a href="./confirmation.html"><li>confirmation</li></a>
-              <a href="./product.html"><li>Produits</li></a>
             </ul>
           </nav>
         </div>
@@ -55,13 +49,13 @@
           <h2>Une gamme d'articles exclusifs</h2>
         </div>
         <section class="items" id="items"> 
-          <a href="./product.html?id=42">
+<!--           <a href="./product.html?id=42">
             <article>
               <img src=".../product01.jpg" alt="Lorem ipsum dolor sit amet, Kanap name1">
               <h3 class="productName">Kanap name1</h3>
               <p class="productDescription">Dis enim malesuada risus sapien gravida nulla nisl arcu. Dis enim malesuada risus sapien gravida nulla nisl arcu.</p>
             </article>
-          </a>
+          </a> -->
         </section>
       </div>
     </main>
